# langGraph_MCP_POC

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/graph/: graph.py  state.py
app/graph/edges/: routing.py
app/graph/nodes/: __init__.py  classify_intent.py  detect_topic.py  finalize_response.py  ingest_user_input.py  llm_response_synthesis.py  llm_tool_selection.py  mcp_tool_invocation.py  retrieve_context.py
app/llm/: ollama_client.py  response_synthesizer.py  tool_registry.py  tool_selector.py
app/mcp_server/: server.py  tool_loader.py  tool_spec.py
app/mcp_server/resources/: topic_map.yaml
app/mcp_server/tools/: __init__.py  _sandbox.py  extract_metadata.py  fetch_web_resource.py  get_cached_resource.py  get_topic_resources.py  list_files.py  read_file.py  refresh_cache.py  search_files.py  summarize_file.py
app/services/: mcp_executor.py
app/services/cache/: __init__.py  cache_client.py  sqlite_cache.py
app/services/db/: models.py  sqlite_client.py
app/services/mq/: consumer.py  producer.py  runner.py  schemas.py
app/ui/: api.py
app/ui/static/: index.html
app/utils/: config.py  errors.py  logging.py  topic_config.py
sandbox/: example.json  hello.txt
tests/: conftest.py
tests/fixtures/sandbox/: data.json  hello.txt  notes.md
tests/integration/: test_graph.py  test_tool_refresh.py
tests/unit/: test_db.py  test_graph_nodes.py  test_llm.py  test_mq.py  test_tool_loader.py  test_tool_registry.py  test_tool_selector_refresh.py  test_tools.py  test_ui.py
(+36 files in other folders)
