[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph-mcp-poc"
version = "0.1.0"
description = "Local-first LangGraph + FastMCP + Ollama agent system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Workflow orchestration
    "langgraph>=0.2.0",
    "langchain-core>=0.2.0",

    # MCP
    "fastmcp>=2.0.0",
    "mcp>=1.0.0",

    # Schema validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Local LLM
    "ollama>=0.3.0",

    # Database
    "aiosqlite>=0.19.0",

    # Message queue (Redis)
    "redis[asyncio]>=5.0.0",

    # Web UI
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",

    # HTTP
    "httpx>=0.27.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "anyio>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
